docs(layout): fix horizontal scrollbars on small screens
This patch addresses #1649 to fix documentation layout. It adds scroll behaviour to:

- Code snippets
- Component props table

This is a better fix than #1706 which was inspired by https://defensivecss.dev/tip/flexbox-min-content-size.

--- a/docs/src/global.css
+++ b/docs/src/global.css
@@ -33,6 +33,11 @@ html[theme="g90"] .code-override {
   overflow-x: auto;
 }
 
+/* Addig this to the layout grid fixes overstretching. */
+.fix-overflow {
+  min-width: 0;
+}
+
 .token.tag,
 .token.operator {
   color: #6ea6ff;
